--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project</title>
+        <title>DisciteX</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="stylesheet" href="resvonsive.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -12,7 +12,8 @@
       <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+                <a href="#">Discitex</a>
+                <a href="#" calss="logo">logo</a>
             </div>
             <div class="header-left">
               <a href="#" class="menu-icon">
